# my_cpp

./: .gitignore  main.cpp  readme.md
book/: book.cpp
cherno/classes/: CMakeLists.txt  a.out  main.cpp  run.sh
cherno/classes/src/: coin_change.cpp  coin_change.h  main.cpp  main2.md  solution.cpp  solution.h
cherno/enums/: CMakeLists.txt
comp/: comp.sln  comp.vcxproj  comp.vcxproj.filters  readme.md
comp-4300/: readme.md
comp/assignment-1/: Makefile  Readme.md
comp/assignment-1/src/: main.cpp
comp/video-01/: main.cpp
exercism/: readme.md
exercism/cpp/hello-world/.exercism/: metadata.json
exercism/cpp/lasagna/: lasagna.cpp
exercism/cpp/lasagna/.exercism/: metadata.json
graphics/YoutubeOpenGL/: CMakeLists.txt  main.cpp
graphics/YoutubeOpenGL/glad/include/glad/: glad.h
graphics/YoutubeOpenGL/glad/src/: glad.c
graphics/YoutubeOpenGL/src/: main.cpp
http_server/src/: http_tcpserver_linux.cpp  http_tcpserver_linux.h  main.cpp
language/: language.sln  language.vcxproj  language.vcxproj.filters  out
language/arrays/: main.cpp  playground
language/exception_handling/: playground
language/exception_handling/src/: main.cpp
language/func_pointers/: CMakeLists.txt  function-pointers.sln  function-pointers.vcxproj  function-pointers.vcxproj.filters
language/function-pointers/: CMakeLists.txt  function-pointers.sln  function-pointers.vcxproj
language/function-pointers/src/: main.cpp
language/memory/: main  main.cpp
language/pointers/: main.cpp  out  playground  pointer_vs_referances.cpp
language/selections/: .clang-format  main.cpp  playground
language/sockets/client/: sockets-client.sln  sockets-client.vcxproj
language/sockets/client/src/: main.cpp
language/sockets/server/: sockets-server.sln  sockets-server.vcxproj
language/sockets/server/src/: main.cpp  main.h
language/sockets/src/: main.cpp
language/sockets2/: client  client.cpp  server  server.cpp
language/stl/: main.cpp  playground
nicholas_yt/basics/: a.out  main.cpp
pilot/: main.cpp  output  pilot.sln  run.sh
pilot/pilot/: main.cpp  pilot.vcxproj
pilot/pilot/x64/Debug/: pilot.exe.recipe  pilot.ilk  vc143.idb
pilot/pilot/x64/Debug/pilot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  pilot.lastbuildstate
playground/: CMakeLists.txt  main.cpp
professional_c++/: .clang-format  .clangd  professional_c++.sln
professional_c++/chapter01/chapter01/: chapter01.vcxproj  chapter01.vcxproj.filters  main.cpp  referances.cppm
professional_c++/chapter02/: chapter02.vcxproj  main.cpp
professional_c++/chapter07/: chapter07.vcxproj  main.cpp
professional_c++/part1/chapter01/: chapter01.sln
professional_c++/part1/chapter01/chapter01/: chapter01.vcxproj  chapter01.vcxproj.filters  referances.cppm  strings.cppm  use-of-const.cppm
professional_c++/part2/chapter01/: main.cpp  out
professional_c++/part3/07/: main.cpp
professional_c++/part3/12/: main.cpp
professional_c++/part3/chapter7/: main.cpp  out
professional_c++/professional_c++/: professional_c++.vcxproj
professional_c++/sandbox/: main.cpp  sandbox.cpp  sandbox.vcxproj
projects/app/: CMakeLists.txt  README.md
projects/app/src/: main.cpp
projects/chatroom/: chatroom  chatroom.sln  chatroom.vcxproj  readme.md
projects/chatroom/src/: main.c  main.cpp
projects/fractal/: CMakeLists.txt
projects/fractal/src/: helpers.cpp  helpers.h  main.cpp
projects/hackattic/help_me_unpack/src/: api.cpp  api.h  base64.cpp  base64.h  main.cpp
projects/hackattic/mini_miner/: .clangd  README.md  build.sh
projects/hackattic/mini_miner/src/: get_data.c  get_data.cpp  get_data.h  main.c  main.cpp  parse_data.cpp  parse_data.h  process_data.cpp  process_data.h
projects/hackattic/reading_qr/: .clangd  Makefile  README.md
projects/hackattic/reading_qr/src/: api.h  main.cpp  maincpp
projects/networking/: CMakeLists.txt  main.cpp
projects/networking/src/: main.cpp
projects/socket/: main.cpp  readme.md
projects/tictactoe/: CMakeLists.txt
projects/tictactoe/src/: game.cpp  helpers.cpp  main.cpp
projects/visualize/: CMakeLists.txt  README.md
projects/visualize/src/: main.cpp
sfml_example/: main.cpp  sfml_app
